--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -21,19 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print((hash('Oleksandr') % 3) + 1)"
+    "print((hash('your first name') % 3) + 1)"
    ]
   },
   {
@@ -182,34 +174,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def missing_num(nums: list) -> int:\n",
-    "    if len(nums) == 0:\n",
-    "        return -1\n",
-    "    min_num = min(nums)\n",
-    "    max_num = max(nums)\n",
-    "    miss_list = []\n",
-    "\n",
-    "    for i in range(min_num, max_num):\n",
-    "        if i not in nums:\n",
-    "            miss_list.append(i)\n",
-    "\n",
-    "    len(miss_list) == 0\n",
-    "    return -1 if len(miss_list) == 0 else miss_list"
+    "def missing_num(nums: List) -> int:\n",
+    "  # TODO"
    ]
   },
   {
@@ -224,16 +194,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# As for me the problem is that we have to find min and max value of the passed list. Then we need to create a list of missing numbers. \n",
-    "# Then we need to loop through all numbers possible between min and max. \n",
-    "# The solution is not optimal because we have to loop over the range of min and max values. \n",
-    "# The time complexity is O(n) and the space complexity is O(n). \n",
-    "# The space complexity is O(n) because we have to store all missing numbers in the list.\n",
-    "# I think it's possible to do it better"
+    "# Your answer here"
    ]
   },
   {
@@ -246,25 +211,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "missing_num([3, 0, 1]) # 2\n",
-    "missing_num([0, 1]) # -1\n",
-    "missing_num([9, 6, 4, 2, 3, 5, 7, 0, 1]) # 8\n",
-    "missing_num([0]) # -1"
+    "# Your answer here"
    ]
   },
   {
@@ -277,10 +228,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Your answer here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -292,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
