--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -21,11 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "print((hash('your first name') % 3) + 1)"
+    "print((hash('Oleksandr') % 3) + 1)"
    ]
   },
   {
@@ -174,12 +182,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def missing_num(nums: List) -> int:\n",
-    "  # TODO"
+    "def missing_num(nums: list) -> int:\n",
+    "    if len(nums) == 0:\n",
+    "        return -1\n",
+    "    min_num = min(nums)\n",
+    "    max_num = max(nums)\n",
+    "    miss_list = []\n",
+    "\n",
+    "    for i in range(min_num, max_num):\n",
+    "        if i not in nums:\n",
+    "            miss_list.append(i)\n",
+    "\n",
+    "    len(miss_list) == 0\n",
+    "    return -1 if len(miss_list) == 0 else miss_list"
    ]
   },
   {
@@ -198,7 +217,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# As for me the problem is that we have to find min and max value of the passed list. Then we need to create a list of missing numbers. \n",
+    "# Then we need to loop through all numbers possible between min and max. \n",
+    "# The solution is not optimal because we have to loop over the range of min and max values. \n",
+    "# The time complexity is O(n) and the space complexity is O(n). \n",
+    "# The space complexity is O(n) because we have to store all missing numbers in the list.\n",
+    "# I think it's possible to do it better"
    ]
   },
   {
@@ -215,7 +239,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "missing_num([3, 0, 1]) # 2\n",
+    "missing_num([0, 1]) # -1\n",
+    "missing_num([9, 6, 4, 2, 3, 5, 7, 0, 1]) # 8\n",
+    "missing_num([0]) # -1"
    ]
   },
   {
