--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -280,7 +280,7 @@
     "            miss_list.append(i)\n",
     "\n",
     "    len(miss_list) == 0\n",
-    "    return -1 if len(miss_list) == 0 else miss_list"
+    "    return -1 if len(miss_list) == 0 else miss_list\n"
    ]
   },
   {
