--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -37,7 +37,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# The problem is to create is_sumettric function that will return True if there is the same value in binary tree on the left and right side from the root\n",
+    "# If there is duplicate value the function should return the closest value to duplicate. It must be one number.\n",
+    "# If there's no such value, the function should return -1"
    ]
   },
   {
@@ -54,7 +56,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# [4, 5, 6, 7, 7, 8, 9, 10, 11, 12, 12] => 7\n",
+    "# [1, 2, 3] => -1\n",
+    "# [1, 2, 2, 3, 4, 4, 3] => 2\n",
+    "# [1, 2, 2, 3, 4, 4, 3, 5, 6, 7, 7, 6, 5] => 2\n",
+    "# [1, 2, 2, 3, 4, 4, 3, 5, 6, 7, 7, 6, 5, 8, 9, 9, 8] => 2"
    ]
   },
   {
@@ -71,7 +77,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Definition for a binary tree node.\n",
+    "class TreeNode(object):\n",
+    "    def __init__(self, val=0, left=None, right=None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
+    "\n",
+    "def enqueue(l, v): # O(1) - add to end of list\n",
+    "    l.append(v)\n",
+    "\n",
+    "def dequeue(l): # O(n) - remove from front of list\n",
+    "    return l.pop(0)\n",
+    "\n",
+    "def is_duplicate(root):\n",
+    "\n",
+    "    if not root:  # Base case: if there's no root, return -1 and end function\n",
+    "        return -1\n",
+    "    \n",
+    "    queue = [root]  # Initialize queue with root node\n",
+    "    seen = set()  # Set to keep track of node values we've seen\n",
+    "\n",
+    "    while queue:    # loop while queue has values\n",
+    "        node = dequeue(queue)  # Dequeue a node\n",
+    "        \n",
+    "        if node.val in seen:  # Check if the node's value has been seen before\n",
+    "            return node.val  # Return the duplicate value if found\n",
+    "        seen.add(node.val) # Mark the node's value as seen\n",
+    "        \n",
+    "        # Traverse left and right child nodes\n",
+    "        if node.left:\n",
+    "            enqueue(queue, node.left)\n",
+    "        if node.right:\n",
+    "            enqueue(queue, node.right)\n",
+    "    \n",
+    "    return -1  # Return -1 if no duplicate is found"
    ]
   },
   {
