--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,11 +124,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# Testing the solution [4, 5, 6, 7, 7, 8, 9, 10, 11, 12, 12]\n",
+    "test = TreeNode(4)\n",
+    "test.left = TreeNode(5)\n",
+    "test.right = TreeNode(6)\n",
+    "test.left.left = TreeNode(7)\n",
+    "test.left.right = TreeNode(7)\n",
+    "test.right.left = TreeNode(8)\n",
+    "test.right.right = TreeNode(9)\n",
+    "test.left.left.left = TreeNode(10)\n",
+    "test.left.left.right = TreeNode(11)\n",
+    "test.right.right.left = TreeNode(12)\n",
+    "test.right.right.right = TreeNode(12)\n",
+    "\n",
+    "print(is_duplicate(test)) # Expected output: 7\n",
+    "\n",
+    "# The solution works because we traverse the tree and dequeue a node after checking if its values was seen before. To record only unique values seen = Set() was used. \n",
+    "# If the value was seen before, the function returns the value. If no duplicate is found, the function returns -1. "
    ]
   },
   {
@@ -145,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# As for me the time complexity of this solution is O(n) because we need to traverse all nodes in the tree to find a duplicate value. The space complexity is also O(n) because we use a queue to store nodes."
    ]
   },
   {
@@ -162,7 +186,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# I think there is possibility to use recusion approach to solve this problem.\n",
+    "# In that case we can also create seen Set to store values that we've seen before in the beginning of the function.\n",
+    "# Then we need to check is it's a node and return -1 and check if the value is in seen Set.\n",
+    "# If the value is not in seen, we can add it to seen Set and call recurse function for left and right child nodes.\n",
+    "\n",
+    "# But I'm not sure if it will be better because it looks for me that it will be the same in terms of time and space complexity."
    ]
   },
   {
@@ -188,7 +217,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Assignment 1 was very interesting for me because I like to solve coding problems. Not always, but sometimes I really enjoy it.\n",
+    "# My task was very easy for me. I think I have to do also tasks 1 and 2 because I'm not professional in data structures\n",
+    "# According to team work that's also really good. It's nice to check how other students solved the problem.\n",
+    "# I'm submitting this assignment quite late because I was sick, but it's still good practice and we need to practice our coding skills to get better code in ML projects."
    ]
   },
   {
@@ -238,8 +270,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "dsi_participant",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
